[gd_scene load_steps=5 format=3 uid="uid://cxrjndkw5ilgj"]

[ext_resource type="Script" path="res://Advanced/Migrate/Migrate.gd" id="1_4anju"]
[ext_resource type="StyleBox" uid="uid://hy41wey1w7ms" path="res://Resources/Panel.tres" id="1_u80ow"]

[sub_resource type="LabelSettings" id="LabelSettings_dbrtn"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_l533f"]
font_color = Color(1, 0, 0, 1)

[node name="Migrate" type="PopupPanel"]
initial_position = 2
size = Vector2i(310, 170)
visible = true
theme_override_styles/panel = ExtResource("1_u80ow")
script = ExtResource("1_4anju")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 308.0
offset_bottom = 168.0
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rename Profile"
label_settings = SubResource("LabelSettings_dbrtn")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Profile to rename: "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
item_count = 1
selected = 0
popup/item_0/text = "Select a profile"
popup/item_0/id = 0

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "New profile name:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "New profile name"
caret_blink = true
caret_blink_interval = 0.5

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "That profile name already exists."
label_settings = SubResource("LabelSettings_l533f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Rename"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
